--- a/primary_school/html/student_list_admin.html
+++ b/primary_school/html/student_list_admin.html
@@ -62,7 +62,7 @@
 
         <div class="row">
             <h1 style="size:32px; margin-top: 30px; margin-bottom: 20px; text-align: center">DANH SÁCH HỌC SINH LỚP
-                5A1(2023)</h1>
+                5A1(2018-2023)</h1>
         </div>
 
         <div class="row ">
@@ -218,11 +218,11 @@
 
             <nav aria-label="Page navigation example" style="float: right">
                 <ul class="pagination">
-                    <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+                    <li class="page-item"><a class="page-link" href="#">Trước</a></li>
                     <li class="page-item"><a class="page-link" href="#">1</a></li>
                     <li class="page-item"><a class="page-link" href="#">2</a></li>
                     <li class="page-item"><a class="page-link" href="#">3</a></li>
-                    <li class="page-item"><a class="page-link" href="#">Next</a></li>
+                    <li class="page-item"><a class="page-link" href="#">Sau</a></li>
                 </ul>
             </nav>
             </div>
